--- a/volumes/logstash/pipeline/gfasales-scratch.conf
+++ b/volumes/logstash/pipeline/gfasales-scratch.conf
@@ -8,7 +8,7 @@ input {
     sql_log_level => "debug"  # Set Logstash logging level as this
     clean_run => true # Set to true for indexing from scratch
     record_last_run => false
-    statement_filepath => "/usr/share/logstash/config/queries/product-quantity.sql"
+    statement_filepath => "/usr/share/logstash/config/queries/gfasales-scratch.sql"
   }
 }
 
@@ -22,8 +22,8 @@ output {
   # stdout { codec => rubydebug { metadata => true } }
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "product-quantity"
+    index => "gfasales"
     action => "index"
-    document_id => "%{productid}"
+    document_id => "%{sale_id}"
   }
 }
